Add and modify methods in GPIOPin class to alter GPIO file permissions.